--- a/Models/Vocoder/2025.01.02_RingFormer.md
+++ b/Models/Vocoder/2025.01.02_RingFormer.md
@@ -24,17 +24,17 @@ While transformers demonstrate outstanding performance across various audio task
 Neural vocoders require the generation of long audio signals at the sample level, which demands high temporal resolution.
 This results in significant computational costs for attention map generation and limits their ability to efficiently process both global and local information.
 Additionally, the sequential nature of sample generation in neural vocoders poses difficulties for real-time processing, making the direct adoption of transformers impractical.
-To address these challenges, we propose RingFormer, a neural vocoder that incorporates the ring attention mechanism into a lightweight transformer variant, the convolution-augmented transformer (Conformer).
+To address these challenges, we propose ***RingFormer***, a neural vocoder that incorporates the ring attention mechanism into a lightweight transformer variant, the convolution-augmented transformer (Conformer).
 Ring attention effectively captures local details while integrating global information, making it well-suited for processing long sequences and enabling real-time audio generation.
-RingFormer is trained using adversarial training with two discriminators.
+***RingFormer*** is trained using adversarial training with two discriminators.
 The proposed model is applied to the decoder of the text-to-speech model VITS and compared with state-of-the-art vocoders such as HiFi-GAN, iSTFT-Net, and BigVGAN under identical conditions using various objective and subjective metrics.
-Experimental results show that RingFormer achieves comparable or superior performance to existing models, particularly excelling in real-time audio generation.
+Experimental results show that ***RingFormer*** achieves comparable or superior performance to existing models, particularly excelling in real-time audio generation.
 Our code and audio samples are available on GitHub.
 
 ## 1·Introduction: 引言
 
 Audio generation models have become core technologies in various application fields such as speech synthesis, music generation, and sound effect creation.
-Recent advancements have significantly enhanced generation quality and stability through generative adversarial network (GAN)-based models (e.g., Parallel WaveGAN [1], HiFi-GAN [2], BigVGAN [3], Avocodo [4]) and diffusion models (e.g., Grad-TTS [5], WaveGrad [6], Diff-TTS [7], E3 TTS [8]), both aiming to achieve high-quality speech synthesis.
+Recent advancements have significantly enhanced generation quality and stability through generative adversarial network (GAN)-based models (e.g., [Parallel WaveGAN [1]](2019.10.25_Parallel_WaveGAN.md), [HiFi-GAN [2]](2020.10.12_HiFi-GAN.md), [BigVGAN [3]](2022.06.09_BigVGAN.md), [Avocodo [4]](2022.06.27_Avocodo.md)) and diffusion models (e.g., [Grad-TTS [5]](../Acoustic/2021.05.13_Grad-TTS.md), [WaveGrad [6]](2020.09.02_WaveGrad.md), [Diff-TTS [7]](../Acoustic/2021.04.03_Diff-TTS.md), [E3 TTS [8]](../Diffusion/2023.11.02_E3_TTS.md)), both aiming to achieve high-quality speech synthesis.
 
 Text-to-speech (TTS) models, which map text input to speech output, have seen major improvements in recent years by leveraging advancements in generative models.
 Among the components of a TTS system, vocoders play a pivotal role in determining the final audio quality.
@@ -42,31 +42,31 @@ They are responsible for converting intermediate audio representations, such as 
 A high-performing vocoder is essential for achieving natural and high-fidelity speech, as it directly impacts both the clarity and temporal consistency of the output audio.
 Studies suggest that vocoders influence more than 50% of the overall system performance, underscoring their critical importance.
 
-GAN-based vocoders [1], [2], [3], [4] have emerged as a leading approach due to their ability to generate high-resolution speech in real-time.
+GAN-based vocoders ([Parallel WaveGAN [1]](2019.10.25_Parallel_WaveGAN.md), [HiFi-GAN [2]](2020.10.12_HiFi-GAN.md), [BigVGAN [3]](2022.06.09_BigVGAN.md), [Avocodo [4]](2022.06.27_Avocodo.md)) have emerged as a leading approach due to their ability to generate high-resolution speech in real-time.
 This capability makes them suitable for tasks such as TTS and speech restoration.
 However, GANbased models face inherent challenges: while they produce sharp and detailed audio, they struggle with capturing long-term dependencies and complex patterns crucial for high-fidelity speech.
 Furthermore, training GAN models can be unstable, leading to mode collapse or inconsistencies in the generated audio.
 Despite these drawbacks, GAN-based vocoders remain a strong choice for real-time and high-resolution applications.
 
-In contrast, diffusion models [5], [6], [7], [8] have gained attention for their ability to enhance the stability and quality of the audio generation process.
+In contrast, diffusion models ([Grad-TTS [5]](../Acoustic/2021.05.13_Grad-TTS.md), [WaveGrad [6]](2020.09.02_WaveGrad.md), [Diff-TTS [7]](../Acoustic/2021.04.03_Diff-TTS.md), [E3 TTS [8]](../Diffusion/2023.11.02_E3_TTS.md)) have gained attention for their ability to enhance the stability and quality of the audio generation process.
 By employing a step-by-step refinement process, diffusion models can produce consistent and natural-sounding speech, excelling in capturing complex and subtle audio details.
 This makes them particularly well-suited for high-quality, non-real-time synthesis.
 However, recent research has pointed out that these models may have limitations for time-sensitive applications due to slower generation speeds and higher computational demands.
 
-In addition to GANs and diffusion models, flow-based models (e.g., WaveGlow [9], Flow-TTS [10], P-Flow [11], ReFlowTTS [12]) and autoregressive models (e.g., Tacotron [13], NaturalSpeech [14]) have contributed to advancements in efficiency and quality.
+In addition to GANs and diffusion models, flow-based models (e.g., [WaveGlow [9]](2018.10.31_WaveGlow.md), [Flow-TTS [10]](../Acoustic/2020.04.09_Flow-TTS.md), [P-Flow [11]](../Flow/P-Flow.md), [ReFlowTTS [12]](../Flow/2023.09.29_ReFlow-TTS.md)) and autoregressive models (e.g., [Tacotron [13]](../Acoustic/2017.03.29_Tacotron.md), [NaturalSpeech [14]](../E2E/2022.05.09_NaturalSpeech.md)) have contributed to advancements in efficiency and quality.
 Autoregressive models excel at modeling the natural flow of speech but often sacrifice speed for quality.
 Flow-based models strike a balance between speed and fidelity but are less widely used than GANs and diffusion models in speech synthesis.
-Optimized architectures such as iSTFT-Net [15] have further improved real-time processing efficiency, and multimodal audio generation models leveraging inputs such as text, images, and video have opened new possibilities for innovative applications.
-Non-autoregressive approaches (e.g., FastSpeech [16], Parallel WaveGAN [1]) have also demonstrated significant strides in speed and quality, enabling real-time and interactive applications.
+Optimized architectures such as [iSTFT-Net [15]](2022.03.04_iSTFTNet.md) have further improved real-time processing efficiency, and multimodal audio generation models leveraging inputs such as text, images, and video have opened new possibilities for innovative applications.
+Non-autoregressive approaches (e.g., [FastSpeech [16]](../Acoustic/2019.05.22_FastSpeech.md), [Parallel WaveGAN [1]](2019.10.25_Parallel_WaveGAN.md)) have also demonstrated significant strides in speed and quality, enabling real-time and interactive applications.
 
 Despite these advancements, significant challenges persist.
 GAN-based vocoders are effective for generating high-resolution audio but still struggle with capturing long-term dependencies, which can lead to quality degradation.
 Diffusion models have improved stability but remain computationally expensive and unsuitable for real-time applications due to their sequential nature.
 
-To address these challenges, we propose a novel GAN-based vocoder called RingFormer that incorporates convolution-augmented Transformers, known as Conformer [17], and an efficient ring attention [18] mechanism introduced in previous research.
-While GANs offer the speed and high resolution necessary for real-time synthesis, RingFormer leverages the Conformer architecture to better capture both local details and global dependencies, addressing key weaknesses of traditional GAN-based models.
+To address these challenges, we propose a novel GAN-based vocoder called ***RingFormer*** that incorporates convolution-augmented Transformers, known as [Conformer [17]](../ASR/2020.05.16_Conformer.md), and an efficient [ring attention [18]](../../Modules/Attention/RingAttention.md) mechanism introduced in previous research.
+While GANs offer the speed and high resolution necessary for real-time synthesis, ***RingFormer*** leverages the Conformer architecture to better capture both local details and global dependencies, addressing key weaknesses of traditional GAN-based models.
 Furthermore, ring attention enhances computational efficiency by focusing attention on localized regions while maintaining the ability to model long-range dependencies.
-This hybrid architecture, RingFormer, balances the tradeoffs between speed and resolution, achieving the temporal resolution and efficiency needed for real-time speech synthesis while maintaining the high-quality audio output expected from modern TTS systems.
+This hybrid architecture, ***RingFormer***, balances the tradeoffs between speed and resolution, achieving the temporal resolution and efficiency needed for real-time speech synthesis while maintaining the high-quality audio output expected from modern TTS systems.
 
 The remainder of this paper is organized as follows: Section II reviews related work.
 Section III describes the proposed model architecture, Section IV explains the loss functions, Section V presents experimental results and performance analysis, and Section VI concludes the paper.
@@ -74,27 +74,27 @@ Section III describes the proposed model architecture, Section IV explains the l
 ## 2·Related Works: 相关工作
 
 GANs have emerged as powerful models in the domain of audio synthesis, particularly for generating high-quality raw audio waveforms.
-WaveGAN [19], introduced by Donahue et al., was the first GAN-based approach designed to directly generate raw audio waveforms by adapting the DCGAN [20] architecture for one-dimensional audio data.
+[WaveGAN [19]](2018.02.12_WaveGAN.md), introduced by Donahue et al., was the first GAN-based approach designed to directly generate raw audio waveforms by adapting the [DCGAN [20]](../CV/2015.11.19_DCGAN.md) architecture for one-dimensional audio data.
 Although WaveGAN demonstrated the feasibility of unsupervised learning for audio generation, it faced limitations in capturing fine-grained details.
-Building on this foundation, MelGAN [21] introduced a multiscale discriminator that leveraged average pooling to downsample audio at multiple scales.
+Building on this foundation, [MelGAN [21]](2019.10.08_MelGAN.md) introduced a multiscale discriminator that leveraged average pooling to downsample audio at multiple scales.
 By incorporating window-based discriminators to model audio features across different resolutions, MelGAN achieved efficient and high-quality audio synthesis with improved fidelity.
 
-HiFi-GAN [2], proposed by Kong et al., advanced the field by adopting a multi-period discriminator capable of capturing periodic structures in time-domain audio.
+[HiFi-GAN [2]](2020.10.12_HiFi-GAN.md), proposed by Kong et al., advanced the field by adopting a multi-period discriminator capable of capturing periodic structures in time-domain audio.
 The model combined short-time Fourier transform (STFT) loss and mel-spectrogram loss, enabling it to generate high-resolution, natural-sounding audio suitable for speech synthesis and restoration tasks.
-GANTTS [22] further refined the use of GANs in audio synthesis by utilizing a conditional feed-forward generator alongside an ensemble of discriminators that operated on random windows of varying sizes.
+[GAN-TTS [22]](2019.09.25_GAN-TTS.md) further refined the use of GANs in audio synthesis by utilizing a conditional feed-forward generator alongside an ensemble of discriminators that operated on random windows of varying sizes.
 This approach enabled GAN-TTS to achieve high-quality audio synthesis while maintaining both local coherence and global consistency.
 
-Parallel WaveGAN [1], introduced by Yamamoto et al., incorporated a combination of multi-resolution STFT loss and adversarial loss in the waveform domain.
+[Parallel WaveGAN [1]](2019.10.25_Parallel_WaveGAN.md), introduced by Yamamoto et al., incorporated a combination of multi-resolution STFT loss and adversarial loss in the waveform domain.
 This innovation allowed for parallel waveform generation, eliminating the need for complex probability density distillation techniques and significantly enhancing both generation speed and quality.
-Similarly, iSTFTNet [15] simplified the output layers of traditional CNN-based vocoders by replacing them with inverse STFT layers.
+Similarly, [iSTFTNet [15]](2022.03.04_iSTFTNet.md) simplified the output layers of traditional CNN-based vocoders by replacing them with inverse STFT layers.
 This design reduced model complexity and computational costs while maintaining audio quality.
 
-BigVGAN [3], developed by Lee et al., pushed the boundaries of GAN-based audio synthesis by incorporating periodic activation functions to stabilize training and anti-aliasing techniques to reduce artifacts.
+[BigVGAN [3]](2022.06.09_BigVGAN.md), developed by Lee et al., pushed the boundaries of GAN-based audio synthesis by incorporating periodic activation functions to stabilize training and anti-aliasing techniques to reduce artifacts.
 These features enhanced fidelity and robustness in the generated audio, making BigVGAN a notable advancement in high-resolution audio synthesis.
 
 While these GAN-based models have driven significant advancements in audio generation, they often struggle to capture long-term dependencies due to their reliance on iterative upsampling processes to expand receptive fields.
 This limitation can result in inconsistencies when modeling extended temporal relationships in audio data.
-To address these challenges, we propose a novel generator architecture, RingFormer, which integrates self-attention mechanisms with convolutional layers.
+To address these challenges, we propose a novel generator architecture, ***RingFormer***, which integrates self-attention mechanisms with convolutional layers.
 This hybrid approach enables the model to effectively capture long-term dependencies while maintaining computational efficiency.
 Additionally, the incorporation of ring attention reduces computational overhead by focusing on fixed local regions, preserving both local and global relationships.
 Enhanced loss functions are also introduced to enable more accurate and efficient audio synthesis.
@@ -112,21 +112,21 @@ Recognizing that capturing long-term dependencies is crucial for modeling realis
 The proposed architecture, as shown in Figure 2, incorporates two stages of Conformer blocks with ring attention and ×4 upsampling between the input and output convolutions.
 This approach contrasts with the upsampling process in HiFiGAN, which uses the multi-receptive field fusion (MRF) technique with [×8, ×8, ×2, ×2] transpose convolutions to perform upsampling and reconstruct raw audio.
 In comparison, our proposed structure simplifies the upsampling process by using two stages of Conformer blocks with ring attention and ×4 upsampling, providing a more efficient and streamlined approach to generating high-quality audio.
-The remaining Conformer blocks, excluding the ring attention, are identical to those in [18].
+The remaining Conformer blocks, excluding the ring attention, are identical to those in [Ring Attention [18]](../../Modules/Attention/RingAttention.md).
 This modification improves the ability to capture long-term dependencies in the generated audio, enhancing the model's overall performance and synthesis quality.
-In the upsampling block, the snake activation function [23] helps the model learn the periodic structure of speech signals more accurately.
+In the upsampling block, the [snake activation function [23]](../../Modules/Activation/Snake.md) helps the model learn the periodic structure of speech signals more accurately.
 Although the final output of the generator is the magnitude and phase of the spectrogram rather than the waveform, these components also exhibit periodic characteristics, making them suitable for modeling periodic structures.
-Unlike BigVGAN [3], no anti-aliasing filter is used for upsampling, as smaller upsampling ratios allow for more stable high-frequency processing.
+Unlike [BigVGAN [3]](2022.06.09_BigVGAN.md), no anti-aliasing filter is used for upsampling, as smaller upsampling ratios allow for more stable high-frequency processing.
 After upsampling, the inverse STFT reconstructs the signal in the frequency domain, separating amplitude and phase for better control.
 This structure maintains memory efficiency for long sequences while improving the learning of long-term dependencies in speech signals.
-Through these improvements, RingFormer achieves more precise speech synthesis without sacrificing speed.
+Through these improvements, ***RingFormer*** achieves more precise speech synthesis without sacrificing speed.
 
 #### Ring Attention: 环注意力
 
 Capturing long-term dependencies is crucial for modeling realistic speech audio.
 For instance, the duration of a phoneme can exceed 100ms, resulting in a high correlation between more than 2,200 adjacent samples in the raw waveform.
-Ring attention [18] is a mechanism designed to efficiently process long sequences by leveraging block-wise parallel computation.
-In RingFormer, ring attention is tailored for vocoders to effectively handle long sequences of speech signals.
+[Ring attention [18]](../../Modules/Attention/RingAttention.md) is a mechanism designed to efficiently process long sequences by leveraging block-wise parallel computation.
+In ***RingFormer***, ring attention is tailored for vocoders to effectively handle long sequences of speech signals.
 
 First, the mel-spectrogram upsampled from the MRF is divided into $N_d$ fixed-size blocks, and each block is assigned to an individual device.
 Here, device refers to an individual computational unit in a parallel processing system, while block represents a segment of a long sequence divided into a fixed length.
@@ -141,7 +141,7 @@ Block-wise attention computations within the device are carried out as follows:
 
 where $i$ denotes the device index, and $d_k$ represents the dimension of the key vector.
 The query $Q_i$ performs a scaled dot product computation with the keys $K=\{K_i,\cdots,K_{i+d-1}\}$ in the same device, which is then multiplied with $V=\{V_i,\cdots,V_{i+d-1}\}$ to calculate the attention values.
-This method overcomes the memory constraints of traditional Transformer [24] models, allowing the context size to scale linearly with the number of devices.
+This method overcomes the memory constraints of traditional [Transformer [24]](../_Transformer/2017.06.12_Transformer.md) models, allowing the context size to scale linearly with the number of devices.
 As a result, ring attention maintains computational efficiency while achieving high performance in both training and inference for extremely large context sizes.
 
 #### Discriminators: 判别器
@@ -149,9 +149,9 @@ As a result, ring attention maintains computational efficiency while achieving h
 We use two discriminators for generator training: the multi-period discriminator (MPD) and the multi-scale sub-band constant-Q transform (MS-SB-CQT) discriminator.
 
 Since speech audio consists of sinusoidal signals with various periods, it is necessary to identify the diverse periodic patterns inherent in the audio data.
-To this end, HiFi-GAN [2] proposed the MPD, and in this paper, we use the same MPD without modification.
+To this end, [HiFi-GAN [2]](2020.10.12_HiFi-GAN.md) proposed the MPD, and in this paper, we use the same MPD without modification.
 
-Additionally, the MS-SB-CQT discriminator [25] improves upon the multi-scale discriminator (MSD) of Mel-GAN [21] by using constant-Q transform (CQT) to process more precise frequency band information.
+Additionally, the [MS-SB-CQT discriminator [25]](2023.11.25_MS-SB-CQT.md) improves upon the multi-scale discriminator (MSD) of [MelGAN [21]](2019.10.08_MelGAN.md) by using constant-Q transform (CQT) to process more precise frequency band information.
 This approach enhances both frequency and time resolution, capturing more detailed characteristics of the speech signal and enabling more natural speech synthesis results.
 While the original MSD focused on capturing information across multiple frequency ranges, CQT allows for more detailed frequency band analysis, providing finer frequency interpretation.
 In this paper, the MS-SB-CQT discriminator is used without modification.
@@ -160,18 +160,18 @@ By using these two discriminators, the diverse periodic patterns inherent in the
 
 ### Training Objective: 训练目标
 
-We use various loss functions to optimize RingFormer.
-To evaluate speech quality, it is integrated into the widely used TTS model VITS [26] and trained by connecting it to the model.
+We use various loss functions to optimize ***RingFormer***.
+To evaluate speech quality, it is integrated into the widely used TTS model [VITS [26]](../E2E/2021.06.11_VITS.md) and trained by connecting it to the model.
 As a result, the encoder parameters of VITS are also updated.
 
 #### Adversarial Loss: 对抗损失
 
-The RingFormer is trained using two discriminators.
-The first is the MPD, originally proposed in HiFi-GAN [2], and the second is the MS-SB-CQT discriminator [25].
+The ***RingFormer*** is trained using two discriminators.
+The first is the MPD, originally proposed in [HiFi-GAN [2]](2020.10.12_HiFi-GAN.md), and the second is the [MS-SB-CQT discriminator [25]](2023.11.25_MS-SB-CQT.md).
 The MPD is designed as a combination of sub-discriminators based on Markovian windows, with each sub-discriminator specializing in detecting different periodic patterns in the input waveform.
 This structure allows for a systematic evaluation of speech data with diverse periodic characteristics.
 However, a limitation of the MPD is that its sub-discriminators evaluate only isolated samples, potentially overlooking broader contextual information.
-To address this limitation, the MS-SB-CQT discriminator, as proposed in [25], is incorporated to enhance performance.
+To address this limitation, the [MS-SB-CQT discriminator [25]](2023.11.25_MS-SB-CQT.md), is incorporated to enhance performance.
 The adversarial loss is defined as follows:
 
 $$
@@ -186,7 +186,7 @@ The contribution of each discriminator to the training loss is controlled by a w
 
 #### Spectral Decomposition Loss: 频谱分解损失
 
-In our work, we explicitly learn magnitude loss and phase loss, building on the findings of [27].
+In our work, we explicitly learn magnitude loss and phase loss, building on the findings of [The Importance of Phase in Speech Enhancement [27]](../_Full/The_Importance_of_Phase_in_Speech_Enhancement.md).
 This approach ensures the accurate reproduction of spectral energy (magnitude) and precise temporal alignment (phase), reducing distortions and enhancing perceptual quality.
 By separately optimizing magnitude and phase, we achieve a balanced trade-off between the time and frequency domains, resulting in better generalization across diverse audio data and more natural sound reconstruction.
 The spectral decomposition loss is defined as follows:
@@ -200,11 +200,11 @@ $$
 $$
 
 Here, $F(\cdot)$ denotes the short-time Fourier transform of the input signal.
-This loss compares the amplitude and phase of the audio signal generated by RingFormer with the amplitude and phase of the ground truth.
+This loss compares the amplitude and phase of the audio signal generated by ***RingFormer*** with the amplitude and phase of the ground truth.
 
 #### Feature Matching Loss: 特征匹配损失
 
-The feature matching loss $\mathcal{L}_{fm}$ [21] minimizes the $l_1$ distance between the intermediate features extracted from the discriminator layers:
+The feature matching loss $\mathcal{L}_{fm}$ ([MelGAN [21]](2019.10.08_MelGAN.md)) minimizes the $l_1$ distance between the intermediate features extracted from the discriminator layers:
 
 $$
 \mathcal{L}_{fm} = \mathbb{E}_{x,z} [\sum_{i=1}^{T} \dfrac{1}{N_i} \| D_k^i(x) - D_k^i(G_{\phi}(z)) \|_1]
@@ -215,12 +215,12 @@ The feature matching loss encourages the generator to produce outputs whose inte
 
 #### Final Loss: 最终损失
 
-The proposed RingFormer is implemented to replace the decoder of the widely used end-to-end TTS model, VITS.
-While the training environment is integrated with VITS, RingFormer is not dependent on it.
-Unlike models such as FastSpeech [16], VITS eliminates the need for a separate duration predictor or aligner (e.g., attention alignment in Tacotron [13]).
-Additionally, VITS combines a GAN with a variational autoencoder (VAE) [28] to generate high-resolution and natural-sounding speech.
+The proposed ***RingFormer*** is implemented to replace the decoder of the widely used end-to-end TTS model, VITS.
+While the training environment is integrated with VITS, ***RingFormer*** is not dependent on it.
+Unlike models such as [FastSpeech [16]](../Acoustic/2019.05.22_FastSpeech.md), VITS eliminates the need for a separate duration predictor or aligner (e.g., attention alignment in [Tacotron [13]](../Acoustic/2017.03.29_Tacotron.md)).
+Additionally, VITS combines a GAN with a [variational autoencoder (VAE) [28]](../_Basis/VAE.md) to generate high-resolution and natural-sounding speech.
 
-In this paper, the proposed RingFormer is optimized using two additional loss functions adopted from VITS.
+In this paper, the proposed ***RingFormer*** is optimized using two additional loss functions adopted from VITS.
 The first is $\mathcal{L}_{dur}$, which facilitates learning text-to-speech alignment, and the second is $\mathcal{L}_{KL}$, which plays a critical role in modeling the relationship between text and speech in the latent space.
 $\mathcal{L}_{KL}$ regulates the distribution of latent variables, enabling natural speech synthesis and supporting the alignment-free structure.
 These two loss functions are applied without modification during the training of the proposed model.
@@ -236,14 +236,14 @@ By setting these hyperparameters to 1, we ensure that each loss component contri
 
 ## 4·Experiments: 实验
 
-To validate the performance of RingFormer, it is applied to the decoder of the widely used TTS model, VITS [26], and the quality of the synthesized speech is evaluated.
-For comparison, the baseline vocoders used are HiFi-GAN [2], iSTFT-Net [15], and BigVGAN [3], which are state-of-the-art models known for achieving top performance in the field.
+To validate the performance of ***RingFormer***, it is applied to the decoder of the widely used TTS model, [VITS [26]](../E2E/2021.06.11_VITS.md), and the quality of the synthesized speech is evaluated.
+For comparison, the baseline vocoders used are [HiFi-GAN [2]](2020.10.12_HiFi-GAN.md), [iSTFTNet [15]](2022.03.04_iSTFTNet.md), and [BigVGAN [3]](2022.06.09_BigVGAN.md), which are state-of-the-art models known for achieving top performance in the field.
 These models are also applied to VITS with the same architecture and hyperparameters to ensure a fair comparison under equal conditions.
-Our code and audio samples are available on GitHub [34].
+Our code and audio samples are available on [GitHub [34]](https://github.com/seongho608/RingFormer).
 
 ### Datasets: 数据集
 
-In this study, we trained and evaluated the model using the widely used LJSpeech dataset [29].
+In this study, we trained and evaluated the model using the widely used [LJSpeech dataset [29]](../../Datasets/2017.07.05_LJSpeech.md).
 The LJSpeech dataset consists of 13,100 high-quality speech samples, totaling approximately 24 hours of speech data.
 Each sample is recorded at a sampling rate of 22,050 Hz and is commonly used in TTS research with English text.
 In this study, 500 samples from the 13,100 LJSpeech samples were allocated to the validation set to assess the model’s performance, while 12,500 samples were used for training.
@@ -262,7 +262,7 @@ The training process is carried out using a single Nvidia A100 GPU with 80GB of 
 
 ### Evaluation Metrics: 评价指标
 
-In this study, the model's performance is evaluated from multiple perspectives using mel-cepstral distortion (MCD) [30], word error rate (WER), short-time objective intelligibility (STOI) [31], NISQA [32], mean opinion score (MOS), and comparison MOS (CMOS).
+In this study, the model's performance is evaluated from multiple perspectives using [mel-cepstral distortion (MCD) [30]](../../Evaluations/MCD.md), word error rate (WER), [short-time objective intelligibility (STOI) [31]](../../Evaluations/STOI.md), [NISQA [32]](../../Evaluations/2021.04.19_NISQA.md), mean opinion score (MOS), and comparison MOS (CMOS).
 
 MCD measures the difference in mel-frequency cepstral coefficients between the synthesized and reference speech.
 A lower MCD value indicates higher similarity between the two voices.
@@ -273,14 +273,14 @@ A value closer to 1 indicates higher intelligibility.
 NISQA is a deep learning-based metric for assessing the quality and naturalness of speech by mimicking human auditory perception and quantifying the subjective quality of speech.
 
 MOS is a subjective evaluation metric, where listeners rate the speech quality on a scale from 1 to 5.
-However, in this study, we utilize the MOS prediction system from UTMOS [33] for objective evaluation, which produces scores highly correlated with human ratings.
+However, in this study, we utilize the MOS prediction system from [UTMOS [33]](../../Evaluations/2022.04.05_UTMOS.md) for objective evaluation, which produces scores highly correlated with human ratings.
 Finally, CMOS is used to compare the relative quality between two speech samples, allowing listeners to select the better-quality sample, thus performing a subjective comparison.
 These diverse metrics enable a comprehensive evaluation of the model’s speech quality, intelligibility, and pronunciation accuracy.
 
 ## 5·Results: 结果
 
-We report the performance of RingFormer and the baseline models evaluated on LJSpeech using the above objective and subjective metrics.
-Table 2 presents the performance evaluation results of RingFormer and baseline vocoder models.
+We report the performance of ***RingFormer*** and the baseline models evaluated on LJSpeech using the above objective and subjective metrics.
+Table 2 presents the performance evaluation results of ***RingFormer*** and baseline vocoder models.
 
 The proposed model demonstrates overall stable performance, achieving particularly strong results in MOS, which evaluates the naturalness and quality of speech, surpassing other models.
 It also maintains consistent quality in the NISQA metric, confirming its ability to deliver reliable performance without introducing distortions to the speech signal.
@@ -290,37 +290,37 @@ Additionally, in the subjective CMOS evaluation, the proposed model shows margin
 This suggests that the proposed model can provide high-quality audio in practical applications.
 These results highlight that the proposed model generates more natural speech quality and clearer pronunciation compared to existing vocoders.
 
-Table 3 presents the evaluation results for the number of parameters and inference speed of RingFormer and the comparison models.
+Table 3 presents the evaluation results for the number of parameters and inference speed of ***RingFormer*** and the comparison models.
 The proposed model achieves high inference speed while maintaining a reasonable balance in terms of model size.
-RingFormer has 3.8 times fewer parameters than BigVGAN [3] and is approximately twice as fast in inference.
-Considering the similar performance of both models, RingFormer can be regarded as sufficiently competitive.
-On the other hand, RingFormer outperforms HiFi-GAN [2] and iSTFT-Net [15] in terms of performance but has 2.1 to 2.2 times more parameters with similar inference speed.
+***RingFormer*** has 3.8 times fewer parameters than [BigVGAN [3]](2022.06.09_BigVGAN.md) and is approximately twice as fast in inference.
+Considering the similar performance of both models, ***RingFormer*** can be regarded as sufficiently competitive.
+On the other hand, ***RingFormer*** outperforms [HiFi-GAN [2]](2020.10.12_HiFi-GAN.md) and [iSTFTNet [15]](2022.03.04_iSTFTNet.md) in terms of performance but has 2.1 to 2.2 times more parameters with similar inference speed.
 Furthermore, when ring attention is removed from the proposed model, the inference speed drops by up to 1.5 times, highlighting the significant role of ring attention in enabling fast speech generation.
 These results demonstrate that our model generates high-quality speech while supporting real-time processing, further enhancing its practicality for various applications.
 
-Table 4 presents the results of evaluating the impact of each component of RingFormer on the quality of synthesized speech.
-The MOS of the complete RingFormer model, which includes all components, is 4.11.
+Table 4 presents the results of evaluating the impact of each component of ***RingFormer*** on the quality of synthesized speech.
+The MOS of the complete ***RingFormer*** model, which includes all components, is 4.11.
 When the magnitude loss ($\mathcal{L}_{mag}$) and phase loss ($\mathcal{L}_{arg}$) are removed, the MOS decreases to 4.05, suggesting that these loss terms contribute to capturing the detailed periodic and amplitude information of speech.
 Removing the MS-SB-CQT discriminator also results in a decline in quality, indicating that continuous sequence discrimination positively contributes to synthesis quality.
 When both components are removed, the MOS reaches its lowest value of 4.03, demonstrating that the combination of magnitude loss, phase loss, and the MS-SB-CQT discriminator is important for maximizing speech synthesis quality.
 
-Additionally, to analyze RingFormer's performance in modeling long-term dependencies more precisely, experiments were conducted by reducing the size of the latent variable $z$ to 1/2 and 1/4, thereby reducing the receptive field.
-The results showed a gradual decline in evaluation metrics as the receptive field decreased, confirming that a sufficient receptive field in RingFormer is crucial for learning long-term dependencies in speech and generating high-quality audio.
+Additionally, to analyze ***RingFormer***'s performance in modeling long-term dependencies more precisely, experiments were conducted by reducing the size of the latent variable $z$ to 1/2 and 1/4, thereby reducing the receptive field.
+The results showed a gradual decline in evaluation metrics as the receptive field decreased, confirming that a sufficient receptive field in ***RingFormer*** is crucial for learning long-term dependencies in speech and generating high-quality audio.
 
-Table 5 evaluates the ability of the RingFormer model to capture long-term dependencies by analyzing the autocorrelation of the F0 contour.
-The results show that the RingFormer model achieves the highest Pearson correlation coefficient with the ground truth, highlighting its strong performance in learning long-term dependencies.
+Table 5 evaluates the ability of the ***RingFormer*** model to capture long-term dependencies by analyzing the autocorrelation of the F0 contour.
+The results show that the ***RingFormer*** model achieves the highest Pearson correlation coefficient with the ground truth, highlighting its strong performance in learning long-term dependencies.
 
 Figure 4 visualizes this capability through an attention map, where bright patterns are maintained even in regions far from the diagonal, reflecting long-term dependencies.
 Additionally, Figure 5 illustrates the attention scores for an arbitrary query.
-As shown in the figure, the RingFormer model assigns notable attention scores even to temporally distant query-key pairs, indicating that it effectively utilizes long-term temporal information during audio generation.
+As shown in the figure, the ***RingFormer*** model assigns notable attention scores even to temporally distant query-key pairs, indicating that it effectively utilizes long-term temporal information during audio generation.
 The attention values are generally evenly distributed, supporting the role of the Conformer block in maintaining a stable and natural temporal structure in the synthesized audio.
 
 ## 6·Conclusions: 结论
 
-In this paper, we propose RingFormer, a vocoder that efficiently processes long sequences with long-term dependencies through a Conformer block with Ring Attention, while maintaining a reasonable memory usage to synthesize high-quality speech.
+In this paper, we propose ***RingFormer***, a vocoder that efficiently processes long sequences with long-term dependencies through a Conformer block with Ring Attention, while maintaining a reasonable memory usage to synthesize high-quality speech.
 This structure captures both local and global dependencies in speech signals, enabling the generation of more natural-sounding speech.
 Additionally, to improve generation speed, the output layer incorporates an inverse STFT structure, and by adding phase and magnitude losses to the loss function, it finely learns temporal patterns and amplitude information, thereby enhancing the quality of the synthesized speech.
 For adversarial training, we introduce the recently released MS-SB-CQT discriminator, which improves the precision of speech synthesis by more accurately evaluating continuous sequences.
-Through various objective metrics such as MCD, WER, STOI, and NISQA, as well as MOS and CMOS evaluations, we verify that RingFormer performs on par with or better than existing models, successfully achieving natural speech and clarity.
+Through various objective metrics such as MCD, WER, STOI, and NISQA, as well as MOS and CMOS evaluations, we verify that ***RingFormer*** performs on par with or better than existing models, successfully achieving natural speech and clarity.
 This study presents a model that balances fast speech synthesis speed and high quality, contributing to the advancement of speech synthesis technology.
-Future research will aim to expand the applicability of RingFormer by optimizing it for multilingual datasets and various application environments.
+Future research will aim to expand the applicability of ***RingFormer*** by optimizing it for multilingual datasets and various application environments.
